[package]
name = "iflypen-api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-retry = "0.3.0"
