[package]
name = "iflypen-api-rs"
version = "2.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-retry = "0.3.0"
thiserror = "1.0.58"
secrecy = "0.8.0"
tracing = "0.1.40"
bytes = "1.6.0"
getrandom = "0.3.3"
